kubernetes/manifests/netpol-pod1.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: pod-demo
spec:
  containers:
  - name: myapp
    image: ikubernetes/myapp:v1
