kubernetes/manifests/pod-test.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: myapp2
  labels: 
    app: myapp
    tier: frontend
spec:
  containers:
  - name: myapp
    image: ikubernetes/myapp:v1
  nodeName: node1 
  tolerations:
  - effect: NoSchedule
    key: node-role.kubernetes.io/master
